네번째 업로드

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <section class="main_visual">
             <div class="inner">
-                <div class="search"><input placeholder="부산의 명소를 검색 해보세요!" /> <img src="img/icons8-수색-48.png"
+                <div class="search"><input type="text" placeholder="부산의 명소를 검색 해보세요!" /> <img src="img/icons8-수색-48.png"
                         alt="검색 이미지" /></div><a href="#">
                     <figure><img src="img/부산_명소.jpg" alt="메인비쥬얼" /></figure>
                 </a>
